# wfc files
c2dat_names= \
       ac_pbe.wfc ag_pbe.wfc al_pbe.wfc ar_pbe.wfc as_pbe.wfc\
       at_pbe.wfc au_pbe.wfc ba_pbe.wfc be_pbe.wfc bi_pbe.wfc\
       b__pbe.wfc br_pbe.wfc ca_pbe.wfc cd_pbe.wfc ce_pbe.wfc\
       cl_pbe.wfc co_pbe.wfc c__pbe.wfc cr_pbe.wfc cs_pbe.wfc\
       cu_pbe.wfc dy_pbe.wfc er_pbe.wfc eu_pbe.wfc fe_pbe.wfc\
       f__pbe.wfc fr_pbe.wfc ga_pbe.wfc gd_pbe.wfc ge_pbe.wfc\
       he_pbe.wfc hf_pbe.wfc hg_pbe.wfc ho_pbe.wfc h__pbe.wfc\
       in_pbe.wfc i__pbe.wfc ir_pbe.wfc k__pbe.wfc kr_pbe.wfc\
       la_pbe.wfc li_pbe.wfc lu_pbe.wfc mg_pbe.wfc mn_pbe.wfc\
       mo_pbe.wfc na_pbe.wfc nb_pbe.wfc nd_pbe.wfc ne_pbe.wfc\
       ni_pbe.wfc n__pbe.wfc np_pbe.wfc o__pbe.wfc os_pbe.wfc\
       pa_pbe.wfc pb_pbe.wfc pd_pbe.wfc pm_pbe.wfc po_pbe.wfc\
       p__pbe.wfc pr_pbe.wfc pt_pbe.wfc pu_pbe.wfc ra_pbe.wfc\
       rb_pbe.wfc re_pbe.wfc rh_pbe.wfc rn_pbe.wfc ru_pbe.wfc\
       sb_pbe.wfc sc_pbe.wfc se_pbe.wfc si_pbe.wfc sm_pbe.wfc\
       sn_pbe.wfc s__pbe.wfc sr_pbe.wfc ta_pbe.wfc tb_pbe.wfc\
       tc_pbe.wfc te_pbe.wfc th_pbe.wfc ti_pbe.wfc tl_pbe.wfc\
       tm_pbe.wfc u__pbe.wfc v__pbe.wfc w__pbe.wfc xe_pbe.wfc\
       yb_pbe.wfc y__pbe.wfc zn_pbe.wfc zr_pbe.wfc \
       cif_core.dic library.dat
c2datdir= $(datadir)/critic2
c2dat_DATA=$(c2dat_names)
EXTRA_DIST=$(c2dat_names)

